# franka_teleoperation_control

./: readme
devel/: .catkin  .rosinstall
devel/include/franka_msgs/: Errors.h  FrankaState.h  error_recovery.h  error_recoveryRequest.h  error_recoveryResponse.h  servoj.h
devel/include/robot_msgs/: omega.h  touch.h
devel/lib/davinci_driver/: davinci_driver_node  test_node
devel/lib/master_driver/: omega_driver_node  omega_driver_node_two  touch_driver_node
devel/lib/motion_planning/: motion_planning_node
devel/lib/pkgconfig/: davinci_driver.pc  franka_arm_moveit_config.pc  franka_description.pc  franka_driver.pc  franka_msgs.pc  master_driver.pc  motion_planning.pc  quat_to_matrix.pc  record_rcm.pc  robot_msgs.pc  servo_control_class.pc  trac_ik_examples.pc  trac_ik_kinematics_plugin.pc  trac_ik_lib.pc  trac_ik_python.pc
devel/lib/quat_to_matrix/: quat_to_matrix_node
devel/lib/record_rcm/: record_rcm
devel/lib/servo_control_class/: franka1_omega1_node  franka2_omega2_node
devel/lib/trac_ik_examples/: ik_tests  rcm_circle  rcm_square
src/: master_dual_omega.sh  master_omega_touch.sh  rcm.txt  recordRCM.sh  stop_master.sh  terminate.py
src/franka_modern_driver/franka_arm_moveit_config/: .setup_assistant  CMakeLists.txt
src/franka_modern_driver/franka_driver/: CMakeLists.txt  package.xml
src/franka_modern_driver/franka_driver/include/franka_modern_driver/: franka_common.h  franka_modern_driver.h  franka_modern_driver_two_arms.h  franka_modern_driver_v2.h
src/franka_modern_driver/franka_driver/launch/: franka_modern_driver.launch  franka_modern_driver_two.launch  franka_modern_driver_v2_dual.launch  franka_modern_driver_v2_franka1.launch  franka_modern_driver_v2_franka2.launch
src/franka_modern_driver/franka_driver/src/: franka_modern_driver.cpp  franka_modern_driver_two_arms.cpp  franka_modern_driver_v2.cpp  joint_pub.cpp  main.cpp  main_franka1.cpp  main_franka2.cpp  main_two_arms.cpp
src/franka_modern_driver/franka_msgs/: CMakeLists.txt
src/teleoperation/: init_pos
src/teleoperation/davinci_driver/: CMakeLists.txt  package.xml
src/teleoperation/master_driver/: CMakeLists.txt  package.xml
src/teleoperation/master_driver/config/: arm_with_tool.yaml  dual_robot_param.yaml  image_raw.rviz  single_robot_param.yaml
src/teleoperation/master_driver/launch/: omega_arm_with_tool.launch  omega_dual_robot.launch  omega_single_robot.launch  omega_touch_robot.launch  touch_real_robot.launch
src/teleoperation/master_driver/omega7_driver/: readme.md
src/teleoperation/master_driver/omega7_driver/include/: dhdc.h  drdc.h
src/teleoperation/master_driver/omega7_driver/lib/release/lin-x86_64-gcc/: libdhd.so.3  libdrd.so.3
src/teleoperation/master_driver/src/: omega_driver.cpp  omega_driver_two.cpp  touch_driver.cpp
src/teleoperation/motion_planning/: CMakeLists.txt
src/teleoperation/quat_to_matrix/: CMakeLists.txt
src/teleoperation/record_rcm/: CMakeLists.txt
src/teleoperation/robot_msgs/: CMakeLists.txt  package.xml
(+134 files in other folders)
